# faeruniancalendar-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: python-publish.yml
src/faeruniancalendar/: __init__.py  converter.py
src/faeruniancalendar/data/: common_year.py  leap_year.py
