[project]
name = "faeruniancalendar"
version = "1.0.0"
authors = [
    { name = "Sebastian Bingham", email = "sebastian@sebastianbingham.com" },
]
description = "A Python module for calculating Faerunian date information based on the Gregorian calendar."
keywords = ["faerun", "faerunian", "date calculation"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/sebastianbingham/faeruniancalendar-python"
Issues = "https://github.com/sebastianbingham/faeruniancalendar-python/issues"
Repository = "https://github.com/sebastianbingham/faeruniancalendar-python.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/faeruniancalendar"]